k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ola-portfolio-service
  namespace: default
  labels:
    app: ola-portfolio-app
spec:
  type: ClusterIP
  selector:
    app: ola-portfolio-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
